--- a/merkzettel.html
+++ b/merkzettel.html
@@ -62,20 +62,17 @@
                             </select>
                         </li>
                         <li>Größe: 104 / 110</li>
-                        <li>Farbe: Sterne (982)</li>
+                        <li>Farbe: Grün</li>
                         <li>
                             <div class="availability">
                                 <p>sofort lieferbar</p>
                             </div>
                         </li>
-                    </ul>                    
-                    <div class="personal">Personalisierung <span class="personalprice">+ 5,95</span></div>     
+                    </ul>                       
                 </div>
             </div>
             <div class="checkout-price">
-                <div class="price txt-red">123,32 €</div>
-                <strike>140,00 €</strike>
-                <div class="basic-price">1,98 € / 100 g</div>
+                <div class="price">59,95 €</div>
                 <a class="button delete jsdelete"><span class="hide">Artikel löschen</span></a>
             </div>
             <div class="cf">
@@ -113,8 +110,7 @@
                 </div>
             </div>
             <div class="checkout-price">
-                <div class="price txt-red">1223,32 €</div>
-                <strike>1320,00 €</strike>
+                <div class="price">24,95 €</div>
                 <a class="button delete jsdelete"><span class="hide">Artikel löschen</span></a>
             </div>
             <div class="cf">
@@ -144,28 +140,28 @@
                             <ul>
                                 <li>Baby-Body mit Motiv</li>
                                 <li>Größe: 56 </li>
-                                <li>Farbe: Flitzer (958)</li>
+                                <li>Farbe: anthrazit/grau meliert</li>
                             </ul>
                         </li>
                         <li>
                             <ul>
                                 <li>Baby-Body mit Motiv</li>
                                 <li>Größe: 56 </li>
-                                <li>Farbe: Vogel (179)</li>
+                                <li>Farbe: geringelt</li>
                             </ul>
                         </li>
                         <li>
                             <ul>
                                 <li>Baby-Body mit Motiv</li>
                                 <li>Größe: 56 </li>
-                                <li>Farbe: Flitzer (958)</li>
+                                <li>Farbe: hellblau/poolblau</li>
                             </ul>
                         </li>
                         <li>
                             <ul>
                                 <li>Baby-Body mit Motiv</li>
                                 <li>Größe: 56 </li>
-                                <li>Farbe: Flitzer (958)</li>
+                                <li>Farbe: hellrosa/krokus</li>
                             </ul>
                         </li>
                         <li>
@@ -177,8 +173,8 @@
                 </div>
             </div>
             <div class="checkout-price">
-                <div class="price txt-red">123,32 €</div>
-                <strike>140,00 €</strike>
+                <div class="price txt-red">23,85 €</div>
+                <strike>31,80 €</strike>
             <a class="button delete jsdelete"><span class="hide">Artikel löschen</span></a>
             </div>
             <div class="cf">
