--- a/pds.html
+++ b/pds.html
@@ -70,7 +70,7 @@
         <section class="back">
             <a href="javascript:history.go(-1)">‹ Zurück</a>
         </section>
-        <form id="pds" action="index.html">
+        <form id="pds" action="warenkorb.html">
             <section>
                 <section class="mediabox">
                     <div class="swiper-container-pds swiper-content">
@@ -136,43 +136,33 @@
                     <h1>Kinder-Fleece-Jacke einzippbar VAUDE</h1>
                     <select name="size" required title="Wählen Sie eine Größe aus">
                         <option value selected="selected">Größe auswählen</option>
-                        <option value="1">92/98 (lieferbar)</option>
                         <option value="2">104/110 (lieferbar)</option>
-                        <option value="3">116/122 (lieferbar)</option>
-                        <option value="4">128/134 (lieferbar)</option>
                         <option value="5" disabled="disabled">140/146 (nicht lieferbar)</option>
-                        <option value="6">152/158 (lieferbar)</option>
                     </select>
                     <select name="color" required title="Wählen Sie eine Farbe aus">
                         <option value selected="selected">Farbe auswählen</option>
-                        <option value="1">Blau (lieferbar)</option>
+                        <option value="1" disabled="disabled">Blau (lieferbar)</option>
                         <option value="2">Grün (lieferbar)</option>
                         <option value="3" disabled="disabled">Lila (nicht lieferbar)</option>
-                        <option value="4">Schwarz (lieferbar)</option>
                     </select>
                     <section class="pricebox">
                         <div class="availability">
                             <p>sofort lieferbar</p>
                         </div>
                         <div class="price-container txtright">
-                            <div class="price-vignette">-33%</div>
                             <div class="price-right cf">
-                                <div class="price txt-red">
-                                    <strong>39,95 €</strong>
-                                </div>
-                                <div class="last-price">
-                                    <strike>59,95 €</strike>
+                                <div class="price">
+                                    <strong>59,95 €</strong>
                                 </div>
                             </div>
                         </div>
                     </section>
                     <aside class="basic-price-box">
                         <p>inkl. MwSt. / zzgl. Versandkosten</p>
-                        <p class="basic-price">1,98 € / 100 g</p>
                     </aside>
                     <section>
-                    	<a href="warenkorb.html" class="button large expand in-to-basket jsSubmitForm">In den Warenkorb</a>
-                        <button class="button expand in-to-leaflet">Auf den Merkzettel</button>
+                    	<button href="warenkorb.html" class="button large expand in-to-basket jsSubmitForm">In den Warenkorb</button>
+                        <a href="merkzettel.html" class="button expand in-to-leaflet">Auf den Merkzettel</a>
                     </section>
                     <section>
                         <ul class="product-details">
