--- a/warenkorb.html
+++ b/warenkorb.html
@@ -62,20 +62,17 @@
                             </select>
                         </li>
                         <li>Größe: 104 / 110</li>
-                        <li>Farbe: Sterne (982)</li>
+                        <li>Farbe: Grün</li>
                         <li>
                             <div class="availability">
                                 <p>sofort lieferbar</p>
                             </div>
                         </li>
                     </ul>   
-                    <div class="personal">Personalisierung <span class="personalprice">+ 5,95</span></div> 
                 </div>
             </div>
             <div class="checkout-price">
-                <div class="price txt-red">123,32 €</div>
-                <strike>140,00 €</strike>
-                <div class="basic-price">1,98 € / 100 g</div>
+                <div class="price">59,95 €</div>
                 <a class="button delete jsdelete"><span class="hide">Artikel löschen</span></a>
             </div>
         </section>
@@ -177,21 +174,25 @@
         </section>
         -->
     </section>
-    <section class="checkout-additions checkout-border">
-        <div class="additions-detail">Warenwert:</div>
-        <div class="additions-price">123,32 €</div>
-    </section>
-    <section class="checkout-additions">
-        <div class="additions-detail">Versandkosten:</div>
-        <div class="additions-price">4,99 €</div>
-    </section>
-    <section class="checkout-additions checkout-border gesamt">
-        <div class="additions-detail"><strong>Gesamt:</strong></div>
-        <div class="additions-price"><strong>128,31 €</strong></div>
-    </section>
-    <section class="checkout-additions checkout-border mwst">
-        <p><small>Alle Angaben inkl. MwSt.</small></p>
-    </section>
+    <div class="checkoutwrapper">
+        <section class="checkout-additions checkout-border">
+            <div class="additions-detail">Warenwert:</div>
+            <div class="additions-price">59,95 €</div>
+        </section>
+        <section class="checkout-additions">
+            <div class="additions-detail">Versandkosten:</div>
+            <div class="additions-price">4,99 €</div>
+        </section>
+        <section class="checkout-additions checkout-border gesamt">
+            <div class="additions-detail"><strong>Gesamt:</strong></div>
+            <div class="additions-price"><strong>64,94 €</strong></div>
+        </section>
+        <section class="checkout-additions checkout-border mwst">
+            <p><small>Alle Angaben inkl. MwSt.</small></p>
+        </section>
+    </div>
+    <p class="delete-txt hide" style="margin:10px; font-weight:bold;">Sie haben im Moment keinen Artikel in Ihrem Warenkorb</p>
+    
     <section class="checkout-benefit">
         <h2>Gutschein / Vorteilsnummer</h2>
         <p>Bitte geben Sie im Schritt 3 (Bestellbestätigung) Ihren Gutschein bzw. Ihre Vorteilsnummer ein.</p>
