--- a/warenkorb.html
+++ b/warenkorb.html
@@ -201,78 +201,145 @@
         <a href="startseite.html" class="button white last">weiter shoppen</a>
         <a href="w1-01-login.html" class="button green next">weiter zur Kasse</a>
     </section>
-    <section id="mainnav">
-        <nav>
-            <h2 class="modul-h1">Alle Kategorien:</h2>
-            <ul class="level1">
-                <li><span class="menuarrow">Kindermode</span>
-                    <ul class="level2">
-                        <li><a href="#">JAKO-O Mädchen Gr. 92-158</a></li>
-                        <li><a href="#">JAKO-O Jungen Gr. 92-158</a></li>
-                        <li><a href="#">FIT-Z Mädchen Gr. 140-182</a></li>
-                        <li><a href="#">FIT-Z Jungen Gr. 140-182</a></li>
-                    </ul>
-                </li>
-                <li><span class="menuarrow">Spielzeug</span>
-                    <ul class="level2">
-                        <li><a href="#">JAKO-O Mädchen Gr. 92-158</a></li>
-                        <li><a href="#">JAKO-O Jungen Gr. 92-158</a></li>
-                        <li><a href="#">FIT-Z Mädchen Gr. 140-182</a></li>
-                        <li><a href="#">FIT-Z Jungen Gr. 140-182</a></li>
-                    </ul>
-                </li>
-                <li><span class="menuarrow">Baby</span>
-                    <ul class="level2">
-                        <li><a href="#">JAKO-O Mädchen Gr. 92-158</a></li>
-                        <li><a href="#">JAKO-O Jungen Gr. 92-158</a></li>
-                        <li><a href="#">FIT-Z Mädchen Gr. 140-182</a></li>
-                        <li><a href="#">FIT-Z Jungen Gr. 140-182</a></li>
-                    </ul>
-                </li>
-                <li><span class="menuarrow">Sport & Bewegung</span>
-                    <ul class="level2">
-                        <li><a href="#">JAKO-O Mädchen Gr. 92-158</a></li>
-                        <li><a href="#">JAKO-O Jungen Gr. 92-158</a></li>
-                        <li><a href="#">FIT-Z Mädchen Gr. 140-182</a></li>
-                        <li><a href="#">FIT-Z Jungen Gr. 140-182</a></li>
-                    </ul>
-                </li>
-                <li><span class="menuarrow">Kinderzimmer</span>
-                    <ul class="level2">
-                        <li><a href="#">JAKO-O Mädchen Gr. 92-158</a></li>
-                        <li><a href="#">JAKO-O Jungen Gr. 92-158</a></li>
-                        <li><a href="#">FIT-Z Mädchen Gr. 140-182</a></li>
-                        <li><a href="#">FIT-Z Jungen Gr. 140-182</a></li>
-                    </ul>
-                </li>
-                <li><span class="menuarrow">Praktisches</span>
-                    <ul class="level2">
-                        <li><a href="#">JAKO-O Mädchen Gr. 92-158</a></li>
-                        <li><a href="#">JAKO-O Jungen Gr. 92-158</a></li>
-                        <li><a href="#">FIT-Z Mädchen Gr. 140-182</a></li>
-                        <li><a href="#">FIT-Z Jungen Gr. 140-182</a></li>
-                    </ul>
-                </li>
-                <li><span class="menuarrow">Basteln</span>
-                    <ul class="level2">
-                        <li><a href="#">JAKO-O Mädchen Gr. 92-158</a></li>
-                        <li><a href="#">JAKO-O Jungen Gr. 92-158</a></li>
-                        <li><a href="#">FIT-Z Mädchen Gr. 140-182</a></li>
-                        <li><a href="#">FIT-Z Jungen Gr. 140-182</a></li>
-                    </ul>
-                </li>
-                <li><span class="menuarrow">Medien</span>
-                    <ul class="level2">
-                        <li><a href="#">JAKO-O Mädchen Gr. 92-158</a></li>
-                        <li><a href="#">JAKO-O Jungen Gr. 92-158</a></li>
-                        <li><a href="#">FIT-Z Mädchen Gr. 140-182</a></li>
-                        <li><a href="#">FIT-Z Jungen Gr. 140-182</a></li>
-                    </ul>
-                </li>
-                <li><span class="menuarrow">% SALE %</span></li>
-            </ul>
-        </nav>
-    </section>
+        <section id="mainnav">
+            <nav>
+                <h2 class="modul-h1">Alle Kategorien:</h2>
+                <ul class="level1">
+                    <li>
+                        <span class="menuarrow">Kindermode</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">JAKO-O Mädchen Gr. 92-158</a>
+                            </li>
+                            <li><a href="pue.html">JAKO-O Jungen Gr. 92-158</a>
+                            </li>
+                            <li><a href="pue.html">FIT-Z Mädchen Gr. 140-182</a>
+                            </li>
+                            <li><a href="pue.html">FIT-Z Jungen Gr. 140-182</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Spielzeug</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Kinder-Spielzeug</a>
+                            </li>
+                            <li><a href="pue.html">Spiele</a>
+                            </li>
+                            <li><a href="pue.html">Spielzeug für Draußen</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Baby</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Baby-Mode ab Gr. 56/62</a>
+                            </li>
+                            <li><a href="pue.html">Baby-Spielzeug</a>
+                            </li>
+                            <li><a href="pue.html">Praktisches fürs Baby</a>
+                            </li>
+                            <li><a href="pue.html">Schwangerschaftsmode</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Sport & Bewegung</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Kinder-Sportgeräte</a>
+                            </li>
+                            <li><a href="pue.html">Kinder-Fahrzeuge</a>
+                            </li>
+                            <li><a href="pue.html">Sportarten</a>
+                            </li>
+                            <li><a href="pue.html">Sportmode</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Kinderzimmer</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Kinder-Möbel</a>
+                            </li>
+                            <li><a href="pue.html">Möbelserien</a>
+                            </li>
+                            <li><a href="pue.html">Heimtextil</a>
+                            </li>
+                            <li><a href="pue.html">Deko & Accessoires</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Kinderfest</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Partyartikel</a>
+                            </li>
+                            <li><a href="pue.html">Themenpartys</a>
+                            </li>
+                            <li><a href="pue.html">Partybeschäftigung</a>
+                            </li>
+                            <li><a href="pue.html">Mitgebsel</a>
+                            </li>
+                            <li><a href="pue.html">personalisierte Geschenke</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Praktisches</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Haushalt</a>
+                            </li>
+                            <li><a href="pue.html">Familie unterwegs</a>
+                            </li>
+                            <li><a href="pue.html">Schulorganisation</a>
+                            </li>
+                            <li><a href="pue.html">Garten & Strand</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Basteln</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Saisonales Basteln</a>
+                            </li>
+                            <li><a href="pue.html">Bastelwerkzeug & mehr</a>
+                            </li>
+                            <li><a href="pue.html">Bastelbedarf</a>
+                            </li>
+                            <li><a href="pue.html">Bastelsets nach Schwierigkeitsgrad</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Medien</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Unterhaltungsbücher</a>
+                            </li>
+                            <li><a href="pue.html">Sachbücher</a>
+                            </li>
+                            <li><a href="pue.html">Lernmaterialien</a>
+                            </li>
+                            <li><a href="pue.html">CDs, DVDs & Multimedia</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">% SALE %</span>
+                         <ul class="level2">
+                            <li><a href="pue.html">Kindermode</a>
+                            </li>
+                            <li><a href="pue.html">Spielzeug & Praktisches</a>
+                            </li>
+                            <li><a href="pue.html">Baby</a>
+                            </li>
+                            <li><a href="pue.html">HABA Outlet</a>
+                            </li>
+                            <li><a href="pue.html">Schwangerschaftsmode</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     <section class="suche">
         <input id="inputsuche" type=search name=s placeholder="Was möchten Sie finden?">
     </section>
