--- a/startseite.html
+++ b/startseite.html
@@ -243,64 +243,58 @@
                     <div class="swiper-slide">
                         <div class="bestseller-box">
                             <a href="pds.html">
-                                <img src="http://www.jako-o.de/medias/sys_master/8800025640990.jpg" alt="" width="200">
+                                <img src="http://www.jako-o.de/medias/sys_master/ha9/hc7/8829980147742.jpg" alt="" width="200">
                                 <p>
-                                    <strong>1. Kinder-Shirt Fotodruck</strong>
+                                    <strong>Kinder-Hose</strong>
                                 </p>
-                                <strike>140,00 €</strike>
-                                <div class="price txt-red">123,32 €</div>
+                                <strike>24,95 €</strike>
+                                <div class="price txt-red">19,95 €</div>
                             </a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bestseller-box">
                             <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="200">
+                                <img src="http://www.jako-o.de/medias/sys_master/hb1/h67/8829175103518.jpg" alt="" width="200">
                                 <p>
-                                    <strong>Kinder-Shirt</strong>
+                                    <strong>Outdoor-Rucksack <br />JAKO-O groß</strong>
                                 </p>
-                                <div class="price">23,32 €</div>
+                                <div class="price">29,95 €</div>
                             </a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bestseller-box">
                             <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="200">
+                                <img src="http://www.jako-o.de/medias/sys_master/hdd/he6/8825946931230.jpg" alt="" width="200">
                                 <p>
-                                    <strong>Kinder-Shirt Fotodruck ohne Grundpreis</strong>
+                                    <strong>Kinder-Leder-Halbschuh JAKO-O zum Kletten</strong>
                                 </p>
-                                <strike>140,00 €</strike>
-                                <div class="price txt-red">123,32 €</div>
+                                <div class="price">39,95 €</div>
                             </a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bestseller-box">
                             <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="200">
+                                <img src="http://www.jako-o.de/medias/sys_master/8799625084958.jpg" alt="" width="200">
                                 <p>
-                                    <strong>Kinder-Shirt Fotodruck mit Grundpreis</strong>
+                                    <strong>Walkie-Talkie Latitude, 2er-Set</strong>
                                 </p>
-                                <strike>999,00 €</strike>
-                                <div class="price txt-red">123,32 €</div>
-                                <div>
-                                    <small>1,98 € / 100 g</small>
-                                </div>
+                                <div class="price">39,95 €</div>
                             </a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bestseller-box">
-                            <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="200">
-                                <p>
-                                    <strong>Kinder-Shirt Fotodruck</strong>
-                                </p>
-                                <strike>140,00 €</strike>
-                                <div class="price txt-red">123,32 €</div>
-                            </a>
-                        </div>
+                        <a href="pds.html">
+                            <img src="http://www.jako-o.de/medias/sys_master/8802501263390.jpg" alt="" width="200">
+                            <p>
+                                <strong>Schrank-Trolley JAKO-O</strong>
+                            </p>
+                            <div class="price">99,95 €</div>
+                        </a>
+                    </div>
                     </div>
                 </div>
             </div>
