--- a/index.html
+++ b/index.html
@@ -75,17 +75,12 @@
                 <div class="swiper-wrapper cf">
                     <div class="swiper-slide">
                         <a href="pds.html">
-                            <img src="http://www.jako-o.de/medias/sys_master/h27/h5a/8824766562334.jpg" width="800" height="270">
+                            <img src="http://www.jako-o.de/medias/sys_master/hbb/he8/8834552528926.jpg" />
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="pds.html">
-                            <img src="http://www.jako-o.de/medias/sys_master/hbb/h06/8824066768926.jpg" width="800" height="270">
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="pds.html">
-                            <img src="http://www.jako-o.de/medias/sys_master/hbb/h06/8824066768926.jpg" width="800" height="270">
+                            <img src="http://www.jako-o.de/medias/sys_master/hb7/he8/8834552397854.jpg" />
                         </a>
                     </div>
                     <div class="swiper-slide">
