--- a/pds.html
+++ b/pds.html
@@ -259,62 +259,45 @@
                     <div class="swiper-slide">
                         <div class="bestseller-box">
                             <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="110">
+                                <img src="http://www.jako-o.de/medias/sys_master/h99/he8/8825961480222.jpg" alt="" width="110">
                                 <p>
-                                    <strong>Kinder-Shirt Fotodruck</strong>
+                                    <strong>Kinder-Langarmshirt Ringelripp</strong>
                                 </p>
-                                <strike>140,00 €</strike>
-                                <div class="price txt-red">123,32 €</div>
+                                <strike>17,95 €</strike>
+                                <div class="price txt-red">12,95 €</div>
                             </a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bestseller-box">
                             <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="110">
+                                <img src="http://www.jako-o.de/medias/sys_master/h8b/he7/8825952632862.jpg" alt="" width="110">
                                 <p>
-                                    <strong>Kinder-Shirt</strong>
+                                    <strong>Kinder-Multifunktions-Tuch</strong>
                                 </p>
-                                <div class="price">23,32 €</div>
+                                <div class="price">7,95 €</div>
                             </a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bestseller-box">
                             <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="110">
+                                <img src="http://www.jako-o.de/medias/sys_master/h56/hef/8819575554078.jpg" alt="" width="110">
                                 <p>
-                                    <strong>Kinder-Shirt Fotodruck</strong>
+                                    <strong>Kinder-Steppweste</strong>
                                 </p>
-                                <strike>140,00 €</strike>
-                                <div class="price txt-red">123,32 €</div>
+                                <div class="price">39,95 €</div>
                             </a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="bestseller-box">
                             <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="110">
+                                <img src="http://www.jako-o.de/medias/sys_master/8811762090014.jpg" alt="" width="110">
                                 <p>
-                                    <strong>Kinder-Shirt Fotodruck</strong>
+                                    <strong>Kinder-Baseballkappe mit Mesh JAKO-O</strong>
                                 </p>
-                                <strike>140,00 €</strike>
-                                <div class="price txt-red">123,32 €</div>
-                                <div>
-                                    <small>1,98 € / 100 g</small>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="bestseller-box">
-                            <a href="pds.html">
-                                <img src="media/8800019808286.jpg" alt="" width="110">
-                                <p>
-                                    <strong>Kinder-Shirt Fotodruck</strong>
-                                </p>
-                                <strike>140,00 €</strike>
-                                <div class="price txt-red">123,32 €</div>
+                                <div class="price">12,95 €</div>
                             </a>
                         </div>
                     </div>
