--- a/frame.html
+++ b/frame.html
@@ -30,6 +30,7 @@
             top:35px;
             left: 155px;
             border-radius:10px;
+            box-shadow: 0 0 1px black;
         }
         .wrapper:before {
             content:" ";
@@ -40,6 +41,7 @@
             bottom:14px;
             left: 165px;
             border-radius:50%;
+            box-shadow: 0 0 1px black;
         }
         #frame {
             padding: 80px 20px;
