--- a/frame.html
+++ b/frame.html
@@ -25,23 +25,23 @@
             content:" ";
             width:20%;
             height:10px;
-            background-color: white;
+            background-color: grey;
             position: absolute;
             top:35px;
             left: 155px;
             border-radius:10px;
-            box-shadow: 0 0 1px black;
+            box-shadow: 0 0 2px white;
         }
         .wrapper:before {
             content:" ";
             width:60px;
             height:60px;
-            background-color: white;
+            background-color: grey;
             position: absolute;
             bottom:14px;
             left: 165px;
             border-radius:50%;
-            box-shadow: 0 0 1px black;
+            box-shadow: 0 0 2px white;
         }
         #frame {
             padding: 80px 20px;
