--- a/frame.html
+++ b/frame.html
@@ -13,6 +13,9 @@
     <!-- SWIPER CSS -->
     <meta name="description" content="JAKO-O Online-Shop: Kindermode, Babymode, Spielzeug und Kindermöbel - Kindersachen mit Köpfchen! ★ Tolle Produkte für Kinder ★ Top Qualität" />
     <style type="text/css">
+        body {
+            background-color:#bbdddd;
+        }
         .wrapper {
             margin:10px auto;
             width:390px;
